<package>
    <name>rosserial_python</name>
    <version>0.9.2</version>
    <license>BSD</license>

    <description>
    A Python-based implementation of the rosserial protocol.
    </description>
    <url>http://ros.org/wiki/rosserial_python</url>

    <buildtool_depend>catkin</buildtool_depend>

    <run_depend>rospy</run_depend>
    <run_depend>rosserial_msgs</run_depend>
    <run_depend>diagnostic_msgs</run_depend>
    <run_depend>python3-serial</run_depend>
</package>
